[gd_scene load_steps=7 format=3 uid="uid://qcqxjrlrdluw"]

[ext_resource type="Texture2D" uid="uid://d00wy7iuluoic" path="res://assets/space invader spaceship still.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bo5t35jhnltpb" path="res://scripts/player.gd" id="1_g2els"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 13.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2els"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
spread = 30.0
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 980, 0)
color = Color(0.37254903, 0.7882353, 0.90588236, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qhqgy"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
gravity = Vector3(0, 980, 0)
color = Color(0.37254903, 0.7882353, 0.90588236, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dqkch"]
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 14.2
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 160.19
initial_velocity_max = 160.19
gravity = Vector3(0, 0, 0)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_g2els")

[node name="LeftEngineParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(-9, 16)
amount = 45
lifetime = 0.3
fixed_fps = 60
local_coords = true
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="RightEngineParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(9, 16)
amount = 45
lifetime = 0.3
fixed_fps = 60
local_coords = true
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_qhqgy")

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.65
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_dqkch")
